Optimize Dockerfile
- Switch to alpine runtime image
- Add caching for maven dependencies during build process
- Use image layering in build process
- Use a non-root user to run container
- Add "/tmp" as volume as per Spring Boot configuration