@@ -1,3 +1,4 @@
+# syntax=docker/dockerfile:experimental
 FROM maven:3-eclipse-temurin-20 AS build-env
 
 LABEL NAME="newsfeed-build"
@@ -8,16 +9,23 @@ RUN mkdir /opt/src
 COPY / /opt/src/newsfeed/
 
 WORKDIR /opt/src/newsfeed
-RUN mvn -q clean install -DskipTests=true -P production && cp target/*.jar /opt/app.jar
+RUN --mount=type=cache,target=/root/.m2 mvn install -DskipTests=true -P production
+RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
 
-FROM eclipse-temurin:20-jre
 
+FROM eclipse-temurin:20-jre-alpine
+VOLUME /tmp
 LABEL NAME="climbd-newsfeed"
 LABEL VERSION=1.0.0
 LABEL MAINTAINER=mithandir@gmail.com
 
-COPY --from=build-env /opt/app.jar /opt/app.jar
+ARG DEPENDENCY=/opt/src/newsfeed/target/dependency
 
-RUN apt-get update && apt-get -y upgrade
+RUN addgroup -S newsfeed && adduser -S newsfeed -G newsfeed
+USER newsfeed
 
-CMD ["java","--enable-preview","-XX:+UseZGC","-XX:+UseDynamicNumberOfGCThreads","-jar","/opt/app.jar"]
+COPY --from=build-env ${DEPENDENCY}/BOOT-INF/lib /app/lib
+COPY --from=build-env ${DEPENDENCY}/META-INF /app/META-INF
+COPY --from=build-env ${DEPENDENCY}/BOOT-INF/classes /app
+
+ENTRYPOINT ["java","--enable-preview","-cp","app:app/lib/*","ch.climbd.newsfeed.NewsfeedApplication"]
